    - Adicionado rotas de soft delete de criação de produto, grupo de produto, código promocional e fornecedor APENAS para admins
    - Adicionado rotas de mostrar um ou TODOS os produtos, grupo de produtos, código promocional e fornecedores APENAS para admins
    - Adicionado rotas de update(PUT) de produto, grupo de produto, código promocional e fornecedor APENAS para admins

12 de agosto:
    - Linkado tabela de metódos de pagamentos ao sale_header
    - Adicionado rotas de adicionar, editar, deletar e requisitar metódos de pagamentos
    - Melhorado sistemas de deleção
    - Adicionado cart em json
    - Adicionado rota para adicionar produtos ao carrinho
    - Adicionado rota de visualizar os itens do carrinho do usuário
    - Adicionado listagem com filtros

13~14 de agosto:
    - Adicionado sistema de cupons funcionando dinamicamente com o carrinho
    - Adicionado rota de finalizar compra

15 de agosto:
    - Adicionado rota de modificar o carrinho
    - Adicionado rota de remover um produto do carrinho
    - Adicionado rota de requisitar reembolso
    - Adicionado rota de aprovar reembolso
    - Criado tabela no banco para armazenar requisições de reembolso
    - Arrumado alguns bugs
    - Adicionado rota de contato

16~17 de agosto:
    - Projeto refatorado 100%
    - Logs melhorados
    - Logs movidos para pasta /logs
    - Adicionado log de falha na conexão com o PGSQL
    - project_base.txt movido para /doc
    - Fix de bugs menores
    - Adicionado códigos http correspondente para todas as rotas
    - Adicionado module-alias
    - Arquitetura melhorada
    - Adicionado proteção contra DoS/DDoS
    - Adicionado rota de relatório de produtos vendidos em um mês específico
    - Adicionado rota de relatório do fluxo de caixa atual
    - Adicionado erro caso ocorra erro em alguma query na parte de compra
    - Adicionado Modelo BETA do SQL
    - Adicionado Query BETA de criação da database no postgres